force-app/main/default/objects/Opportunity/fields/Empresa_Operadora__c.field-meta.xml
<CustomField>
    <fullName>Empresa_Operadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa Operadora</label>
    <referenceTo>Empresa__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Opportunities_Empresa_Operadora</relationshipName>
    <type>Lookup</type>
</CustomField>