force-app/main/default/objects/Opportunity/fields/empresaQueFactura__c.field-meta.xml
<CustomField>
    <fullName>empresaQueFactura__c</fullName>
    <description>Empresa a la cuál se factura, cuando se va al ERP.</description>
    <inlineHelpText>Empresa a la cuál se factura, cuando se va al ERP.</inlineHelpText>
    <label>Empresa que Factura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Otobay</fullName>
            </value>
            <value>
                <fullName>Bavarian</fullName>
            </value>
            <value>
                <fullName>PEKING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>