force-app/main/default/objects/Opportunity/fields/Estado_Anticipo__c.field-meta.xml
<CustomField>
    <fullName>Estado_Anticipo__c</fullName>
    <label>Estado Anticipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Recibido</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>