force-app/main/default/objects/Opportunity/fields/Flag_Vehiculo_Nuevo_FM__c.field-meta.xml
<CustomField>
    <fullName>Flag_Vehiculo_Nuevo_FM__c</fullName>
    <formula>OR(RecordType.Name = &apos;BMW&apos;,RecordType.Name = &apos;MINI&apos;,RecordType.Name = &apos;Motorrad&apos;,RecordType.Name = &apos;Polaris&apos;,RecordType.Name = &apos;Kawasaki&apos;, RecordType.Name = &apos;Indian&apos;, RecordType.Name = &apos;Omoda&apos;, RecordType.Name = &apos;Jaecoo&apos; )</formula>
    <inlineHelpText>Campo formula que indica si un prespuesto esta relacionado a una oportunidad de vehiculos nuevos, el valor es calculado en funcion del record type.</inlineHelpText>
    <label>Flag Vehiculo Nuevo</label>
    <type>Checkbox</type>
</CustomField>