force-app/main/default/objects/Opportunity/fields/GerenteSucursal__c.field-meta.xml
<CustomField>
    <fullName>GerenteSucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente de Sucursal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OportunidadesGerentes</relationshipName>
    <type>Lookup</type>
</CustomField>