force-app/main/default/objects/Opportunity/fields/Importetotaldelnegocio__c.field-meta.xml
<CustomField>
    <fullName>Importetotaldelnegocio__c</fullName>
    <label>Facturación total del negocio</label>
    <summarizedField>OpportunityLineItem.Preciodefacturacion__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>