force-app/main/default/objects/Opportunity/fields/JefeSucursal__c.field-meta.xml
<CustomField>
    <fullName>JefeSucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jefe de Sucursal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OportunidadesJefes</relationshipName>
    <type>Lookup</type>
</CustomField>