force-app/main/default/objects/Opportunity/fields/Notificar_reserva_veh_culo__c.field-meta.xml
<CustomField>
    <fullName>Notificar_reserva_veh_culo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificar reserva vehículo</label>
    <type>Checkbox</type>
</CustomField>