force-app/main/default/objects/Opportunity/fields/Saldo_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Pendiente__c</fullName>
    <description>Saldo pendiente calculado como Valor Total Oportunidad menos total de anticipos aprobados.</description>
    <formula>BLANKVALUE(Valor_Total_Oportunidad_FX__c, 0) - BLANKVALUE(Total_Anticipos_Aprobados__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculado con base en Valor_Total_Oportunidad_FX__c y Total_Anticipos_Aprobados__c.</inlineHelpText>
    <label>Saldo pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>