force-app/main/default/objects/Opportunity/fields/SucursalId__c.field-meta.xml
<CustomField>
    <fullName>SucursalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sucursal</label>
    <referenceTo>Sucursal__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>OportunidadesSucursales</relationshipName>
    <type>Lookup</type>
</CustomField>