force-app/main/default/objects/Opportunity/fields/Synced_Quote__c.field-meta.xml
<CustomField>
    <fullName>Synced_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indica el presupuesto sincronizado</inlineHelpText>
    <label>Presupuesto Sincronizado</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>