force-app/main/default/objects/Opportunity/fields/Tiene_Vehiculos_Reservados__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Vehiculos_Reservados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene Vehiculos Reservados</label>
    <type>Checkbox</type>
</CustomField>