force-app/main/default/objects/Opportunity/fields/Total_Anticipos_Aprobados__c.field-meta.xml
<CustomField>
    <fullName>Total_Anticipos_Aprobados__c</fullName>
    <description>Suma de anticipos finales/aprobados asociados a la oportunidad para VN-RQ106.</description>
    <inlineHelpText>Suma anticipos en estados finales Aplicado y Vehículo reservado.</inlineHelpText>
    <label>Total anticipos aprobados</label>
    <summarizedField>Anticipo__c.Monto__c</summarizedField>
    <summaryFilterItems>
        <field>Anticipo__c.Estatus__c</field>
        <operation>equals</operation>
        <value>Aplicado,Vehículo reservado</value>
    </summaryFilterItems>
    <summaryForeignKey>Anticipo__c.Oportunidad__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>