force-app/main/default/objects/Opportunity/fields/Valor_Total_Oportunidad_FX__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Oportunidad_FX__c</fullName>
    <formula>IF(ISNULL(ValorTotal__c),0,ValorTotal__c) - IF(ISNULL(MontodeRegalias__c),0,MontodeRegalias__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>