force-app/main/default/objects/Opportunity/fields/ValorTotal__c.field-meta.xml
<CustomField>
    <fullName>ValorTotal__c</fullName>
    <label>Valor Total</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>