force-app/main/default/objects/Opportunity/fields/Vehiculos_Reservados__c.field-meta.xml
<CustomField>
    <fullName>Vehiculos_Reservados__c</fullName>
    <label>Vehiculos Reservados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>