force-app/main/default/objects/Opportunity/recordTypes/Jaecoo.recordType-meta.xml
<RecordType>
    <fullName>Jaecoo</fullName>
    <active>true</active>
    <businessProcess>Autos</businessProcess>
    <label>Jaecoo</label>
</RecordType>