force-app/main/default/objects/Opportunity/recordTypes/Omoda.recordType-meta.xml
<RecordType>
    <fullName>Omoda</fullName>
    <active>true</active>
    <businessProcess>Autos</businessProcess>
    <label>Omoda</label>
</RecordType>