force-app/main/default/objects/Opportunity/validationRules/Cambiar_a_Finalizado_Descuento.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambiar_a_Finalizado_Descuento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(CONTAINS($Profile.Name, &quot;Admin&quot;)),
  ISPICKVAL(StageName, &quot;Finalizado&quot;),
  OR(
    $RecordType.DeveloperName = &quot;BMW&quot;,
    $RecordType.DeveloperName = &quot;MINI&quot;,
    $RecordType.DeveloperName = &quot;Omoda&quot;,
    $RecordType.DeveloperName = &quot;Jaecoo&quot;
  ),
  NOT(ISBLANK(Aprobador__c)),
  Aprobador__c &lt;&gt; &quot;Vendedor&quot;,
  OR(
    NOT(DescuentoAprobado__c),
    Descuento_rechazado__c
  )
)</errorConditionFormula>
    <errorMessage>El descuento debe estar aprobado y no rechazado antes de finalizar la oportunidad.</errorMessage>
</ValidationRule>