force-app/main/default/objects/Opportunity/validationRules/Cambiar_a_Finalizado_Formalizacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambiar_a_Finalizado_Formalizacion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(CONTAINS($Profile.Name, &quot;Admin&quot;)),
  ISPICKVAL(StageName, &quot;Finalizado&quot;),
  OR(
    $RecordType.DeveloperName = &quot;BMW&quot;,
    $RecordType.DeveloperName = &quot;MINI&quot;
  ),
  NOT(Envio_formalizacion_legal__c)
)</errorConditionFormula>
    <errorMessage>Para pasar a Finalizado, debe haberse enviado la formalización legal.</errorMessage>
</ValidationRule>