force-app/main/default/objects/Opportunity/validationRules/Cambiar_Oportunidad_a_Finalizado_VH.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambiar_Oportunidad_a_Finalizado_VH</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(CONTAINS($Profile.Name, &quot;Admin&quot;)),
  ISPICKVAL(StageName, &quot;Finalizado&quot;),
  OR(
    $RecordType.DeveloperName = &quot;BMW&quot;,
    $RecordType.DeveloperName = &quot;MINI&quot;,
    $RecordType.DeveloperName = &quot;Omoda&quot;,
    $RecordType.DeveloperName = &quot;Jaecoo&quot;
  ),
  NOT(Tiene_Vehiculos_Reservados__c)
)</errorConditionFormula>
    <errorMessage>Para pasar a Finalizado, debe tener al menos un vehículo reservado.</errorMessage>
</ValidationRule>