force-app/main/default/objects/Opportunity/listViews/Oportunidades_ganadas_Omoda.listView-meta.xml
<ListView>
    <fullName>Oportunidades_ganadas_Omoda</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ConsecutivoOportunidad__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Vendedor__c</columns>
    <columns>CorreoElectronicoCliente__c</columns>
    <columns>Telefono_formula__c</columns>
    <columns>Familia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Cerrada Ganada</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Omoda</value>
    </filters>
    <label>Oportunidades ganadas Omoda</label>
    <sharedTo>
        <group>Asesor_de_Ventas_BMW_y_Nuevos_V2</group>
        <group>Asesor_de_Ventas_Online_BMW_y_Nuevos_V2</group>
    </sharedTo>
</ListView>