force-app/main/default/objects/Opportunity/listViews/Oportunidades_Perdidas_Omoda.listView-meta.xml
<ListView>
    <fullName>Oportunidades_Perdidas_Omoda</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Loss_Reason__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Importetotaldelnegocio__c</columns>
    <columns>SucursalId__c</columns>
    <columns>Vendedor__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Cerrada Perdida</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Omoda</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2025 12:00 AM</value>
    </filters>
    <label>Mis Oportunidades Perdidas Omoda</label>
    <sharedTo>
        <group>Asesor_de_Ventas_BMW_y_Nuevos_V2</group>
        <group>Asesor_de_Ventas_Online_BMW_y_Nuevos_V2</group>
    </sharedTo>
</ListView>