force-app/main/default/objects/Opportunity/listViews/Todas_Oportunidades_Perdidas_Jaecoo.listView-meta.xml
<ListView>
    <fullName>Todas_Oportunidades_Perdidas_Jaecoo</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Loss_Reason__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>Importetotaldelnegocio__c</columns>
    <columns>SucursalId__c</columns>
    <columns>Vendedor__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.LEAD_SOURCE</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Cerrada Perdida</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Jaecoo</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2025 12:00 AM</value>
    </filters>
    <label>Todas las Oportunidades Perdidas Jaecoo</label>
    <sharedTo></sharedTo>
</ListView>